--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -2134,7 +2134,7 @@ $0.24
 			
 
 </ul>
-<p>Matthew is also eligible to a $500 reduction for his standby charge benefit (amount from step 10).</p>
+<p>Matthew is also eligible to a $500 reduction for his standby charge benefit (step 10).</p>
 </details>
 </details>
 
@@ -2148,13 +2148,13 @@ $0.24
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Standby charge benefit (amount from step 10)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Standby charge benefit (step 10)</span> 
                                  </li>
 			<li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Operating expenses benefit (amount from step 11)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Operating expenses benefit (step 13)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
  		<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -2189,13 +2189,13 @@ $0.24
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> $11,500 is Matthew's standby charge (amount from step 10)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> $11,500 is Matthew's standby charge (step 10)</span> 
                                  </li>
    			<li>
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $2,600 is Matthew's operating expenses (amount from step 11)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $2,600 is Matthew's operating expenses (step 13)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
