--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -275,6 +275,7 @@
  <p class="small mrgn-bttm-sm"><strong>You may be looking for:</strong></p>
                   <ul class="small mrgn-tp-sm">
                      <li><a href="/cra-arc/payroll/calculate/benefit/vehicle-allowance.html">Automobile or motor vehicle benefits – Allowances or reimbursements provided to an employee for the use of their own vehicle</a></li>
+ <li><a href="/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a></li>
 		  
                   </ul>
               
@@ -316,11 +317,11 @@
 
  	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the vehicle is an <strong>automobile</strong>, do not continue to next step. Refer to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the vehicle is a <strong>motor vehicle</strong>, continue to: <a href="#step2">Step 2 -  Determine if you made the motor vehicle available to the employee</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the vehicle is a <strong>motor vehicle</strong>, continue to: <a href="#step2">Step 2 -  Determine if you made the motor vehicle available to your employee</a></li>
 </ul>	 </li>
 
 
-<li><h3 id="step2">Determine if you made the motor vehicle available to the employee</h3>
+<li><h3 id="step2">Determine if you made the motor vehicle available to your employee</h3>
  <div data-ajax-replace="ajax/availability-vehicle.txt"></div>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -365,7 +366,7 @@
 <p>You need to calculate the value of the benefit from your employee's personal driving of the motor vehicle.  </p>
 </div>
 
-<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to the employee</h2>
+<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/availability-vehicle.txt"></div>
 
@@ -394,7 +395,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
     <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, you <strong>cannot</strong> calculate using the fixed rate calculation.</p>  
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the value of the motor vehicle benefit to be included on the T4 slip</a></p>  </li>    
-    <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the required records and you received a copy, you may be able to calculate using the <strong>fixed rate calculation</strong>. </p>
+    <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required records and you received a copy, you may be able to calculate using the <strong>fixed rate calculation</strong>. </p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the motor vehicle home at night policy applies to the benefit</a></p>  </li>
                           </ul>
 </li>
@@ -618,7 +619,7 @@
 </ul>
 
 <h4>What may not be considered a reasonable estimate</h4>
-<p>If you calculate the benefit by prorating the operating costs and capital cost allowance, this <strong>does not</strong> necessarily represent the value of the benefit to the employee. </p>
+<p>If you calculate the benefit by prorating the operating costs and capital cost allowance, this <strong>does not</strong> necessarily represent the value of the benefit to your employee. </p>
 
 <p>To be a reasonable estimate, the value must correspond to the amount an employee would have to pay for the use of the motor vehicle when used for the purpose it was designed for.</p>
 
@@ -728,12 +729,12 @@
 </div>
 		 
 	
-	<section id="availability2" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">What is considered made available to the employee</h2>
+	<section id="availability2" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/availability-vehicle.txt"></div>
 	</div></section>
 
-	<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to the employee</h2>
+	<section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/availability-vehicle.txt"></div>
 	<div class="modal-footer">
