--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -184,8 +184,8 @@
 			<a href="moving-expenses.html#gc-document-nav" class="visible-xs visible-sm">Moving and relocation expenses</a>
       </li>
 	  <li>
-			<a href="municipal.html" class="hidden-xs hidden-sm">Municipal officer's expense allowance</a>
-			<a href="municipal.html#gc-document-nav" class="visible-xs visible-sm">Municipal officer's expense allowance</a>
+			<a href="municipal.html" class="hidden-xs hidden-sm">Municipal officer’s expense allowance</a>
+			<a href="municipal.html#gc-document-nav" class="visible-xs visible-sm">Municipal officer’s expense allowance</a>
       </li>
 <li>
 			<a href="parking.html" class="hidden-xs hidden-sm">Parking </a>
@@ -640,19 +640,19 @@
 		 <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> 5,500 is Judith's actual number of kilometres travelled for personal driving (step 7a)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> 5,500 is Judith’s actual number of kilometres travelled for personal driving (step 7a)</span> 
                                  </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 8,335 is Judith's limit that applies to the number of kilometres travelled for personal driving (step 7b)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 8,335 is Judith’s limit that applies to the number of kilometres travelled for personal driving (step 7b)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
                                     <span class="fas fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x fa-inverse"></span>
-                                    </span> <span class="mrgn-tp-0 text-muted h5">0.66 is Judith's personal use quotient which is less than 1 for the reduced standby charge
+                                    </span> <span class="mrgn-tp-0 text-muted h5">0.66 is Judith’s personal use quotient which is less than 1 for the reduced standby charge
                                     </span></span> </li>
 </ul>
 </details>
@@ -680,7 +680,7 @@
 <ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">You own the automobile provided to your employee </li>
 <li class="cnjnctn-col">Your employee uses the same automobile throughout the year </li>
-<li class="cnjnctn-col">Your employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
+<li class="cnjnctn-col">Your employee’s principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
 <li class="cnjnctn-col">Your employee is <strong>not</strong> eligible for the reduced standby charge</li>
 </ul>
 <hr>
@@ -724,7 +724,7 @@ estimated by the number of pay periods in the year. </p>
   <li class="cnjnctn-col">Cost of the automobile when it was bought, including options and accessories, and the GST/HST and PST, but <strong>not including</strong> any reduction for a trade-in </li>
   <li class="cnjnctn-col">Cost of additions, including the GST/HST and PST, made to the automobile after it was bought (that you add to the capital cost of the automobile to calculate the deduction for depreciation)</li>
 </ul>
-<p>Where the automobile was purchased from a non-arm's length person, the cost is generally equal to the fair market value when it was bought, including options and GST/HST or PST.</p>
+<p>Where the automobile was purchased from a non-arm’s length person, the cost is generally equal to the fair market value when it was bought, including options and GST/HST or PST.</p>
 </div>
 </details>
 <details><summary>How to calculate the cost of the automobile when used as part of an automobile fleet</summary>
@@ -1153,7 +1153,7 @@ estimated by the number of pay periods in the year. </p>
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Carole was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario. Carole's primary source of employment is selling or leasing  automobiles. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. The automobile was made available to Carole for 150 days during the year. She used the automobile for business driving 80% of the time. In reviewing  her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. Carole reimbursed you $500 for the standby charge.</p>
+<p>In 2022, Carole was required to use an  automobile provided and owned by her employer in connection with her employment in Ontario. Carole’s primary source of employment is selling or leasing  automobiles. The cost of the automobile when it was bought, including options and accessories, and the HST was $50,000. The automobile was made available to Carole for 150 days during the year. She used the automobile for business driving 80% of the time. In reviewing  her travel logbook, you found that she drove 5,500 km for personal driving (1,100 km per 30-day period) out of a total of 27,525 km. Carole reimbursed you $500 for the standby charge.</p>
  <h4>Step A - Cost of automobile</h4>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 		    
@@ -1972,7 +1972,7 @@ estimated by the number of pay periods in the year. </p>
 <tr>
 <th scope="col" class="align-centre">Year</th>
 <th scope="col" class="align-centre">Employee does not sell or leases automobiles</th>
-<th scope="col" class="align-centre">Employee's source of employment is selling or leasing automobiles</th>
+<th scope="col" class="align-centre">Employee’s source of employment is selling or leasing automobiles</th>
 </tr>
 
 </thead>
@@ -2189,13 +2189,13 @@ $0.24
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> $11,500 is Matthew's standby charge (step 10)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> $11,500 is Matthew’s standby charge (step 10)</span> 
                                  </li>
    			<li>
                                  <span class="fas  fa-li"><span class="fas fa-plus"></span> <span class="wb-inv">plus</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $2,600 is Matthew's operating expenses (step 13)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> $2,600 is Matthew’s operating expenses (step 13)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -2222,7 +2222,7 @@ $0.24
 
 				
 		</ul>
-<p>The employer needs to report on Matthew's T4 slip the amount of $13,933.33 for the total automobile benefits. </p>
+<p>The employer needs to report on Matthew’s T4 slip the amount of $13,933.33 for the total automobile benefits. </p>
 
 </details>
 
@@ -2249,7 +2249,7 @@ $0.24
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
                       <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings <small class="text-muted">(for cash benefit only)</small></li>
                          <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings</li>
-                         <li><span class="fas fa-check fa-li text-success"></span>Code 34 - Personal use of employer's automobile or motor vehicle</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Code 34 - Personal use of employer’s automobile or motor vehicle</li>
 		
                      </ul>
   </li>
@@ -2285,7 +2285,7 @@ $0.24
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(iv) </a></dt>
 <dd> Representation or other special allowances (agent-general of a province – Period in Ottawa)</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(v)</a></dt>
-<dd> Reasonable allowances for travel expenses (in connection with the selling of property or negotiating of contracts for the employee's employer) </dd>
+<dd> Reasonable allowances for travel expenses (in connection with the selling of property or negotiating of contracts for the employee’s employer) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(v.1) </a></dt>
 <dd> Allowances for board and lodging to a monthly maximum of $300 (members of a sports team or recreation program) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vi) </a></dt>
@@ -2293,15 +2293,15 @@ $0.24
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii) </a></dt>
 <dd> Reasonable allowances for travel expenses (Restriction at the municipal or regional level) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(vii.1)</a></dt>
-<dd> Reasonable allowances for the use of a motor vehicle (received from the employee's employer for travelling in the performance of employment duties) </dd>
+<dd> Reasonable allowances for the use of a motor vehicle (received from the employee’s employer for travelling in the performance of employment duties) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(x)</a></dt>
 <dd>  Allowance for the use of the vehicle for the purpose of the allowance is not based solely on the number of kilometers </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(ix)</a></dt>
-<dd> Allowance not in excess of reasonable amounts for tuition fees (Child living away from the employee's domestic establishment – official language) </dd>
+<dd> Allowance not in excess of reasonable amounts for tuition fees (Child living away from the employee’s domestic establishment – official language) </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(b)(xi)</a></dt>
 <dd> Reimbursement for supplementary business insurance, toll or ferry charges if the allowance was determined without reference to those reimbursed expenses</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(e) and 6(2)</a></dt>
-<dd> Standby charge and calculation – Employer's automobile available for personal driving </dd>
+<dd> Standby charge and calculation – Employer’s automobile available for personal driving </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(e)(i)</a></dt>
 <dd> description </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA:  6(1)(e)(ii)</a></dt>
@@ -2315,11 +2315,11 @@ $0.24
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(k)(iv)</a></dt>
 <dd> Half of the standby charge - optional calculation </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1)(l)</a></dt>
-<dd> Automobile operating benefit – Where amounts are not calculated under 6(1)(k) and an employee receives payment (not an allowance) for the cost of operating the employee's automobile </dd>
+<dd> Automobile operating benefit – Where amounts are not calculated under 6(1)(k) and an employee receives payment (not an allowance) for the cost of operating the employee’s automobile </dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(1.1)</a></dt>
 <dd> Parking not included in the automobile benefit. Parking is a separate benefit.</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(2)</a></dt>
-<dd> Standby charge + calculation – employer's automobile available for personal driving</dd>
+<dd> Standby charge + calculation – employer’s automobile available for personal driving</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(6)</a></dt>
 <dd> Employment at special work site or remote location</dd>
 <dt><a href="https://lois-laws.justice.gc.ca/eng/acts/I-3.3/page-1.html#h-279788">ITA: 6(7)</a></dt>
