--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1804,11 +1804,11 @@ estimated by the number of pay periods in the year. </p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><strong>Do not</strong> calculate the operating expenses benefit if your <strong>employee reimburses you for all operating expenses</strong> related to personal driving <strong>no later than 45 days after the end of the year</strong>.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step14">Step 14 - Calculate the value of the automobile benefit to be included on the T4 slip</a></p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step14">Step 14 - Calculate the value of the automobile benefit to be included on the T4 slip</a>.</p>
 
 </li>
                          <li class="cnjnctn-col"><p>You have to calculate the operating expenses benefit if your employee <strong>does not </strong> reimburses you for all operating expenses related to personal driving no later than 45 days after the end of the year.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step12">Step 12 - Determine if your employee is eligible for the optional operating expenses calculation</a></p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step12">Step 12 - Determine if your employee is eligible for the optional operating expenses calculation</a>.</p>
 </li>
                           </ul>
 </li>
