--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -701,7 +701,7 @@
 <li class="cnjnctn-col"><span class="fas fa-file-alt text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a> to manually calculate</li>
 </ul>
 <hr>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> You can also continue to <a href="#step10">Steps 10 to 12</a> to manually calculate the taxable benefit, which include calculation examples.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> You can also continue to <a href="#step10">steps 10 to 12</a> to manually calculate the taxable benefit, which include calculation examples.</p>
 
 </li>
 
