--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -685,7 +685,7 @@
 </ul>
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation. You must used the <strong>detailed</strong> standby charge calculation.</p>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation. You must use the <strong>detailed</strong> standby charge calculation.</p>
 
 </li>
                          <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions, calculate using the <strong>simplified</strong> standby charge calculation.</p></li>
