--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -183,8 +183,8 @@
 			<a href="moving-expenses.html#gc-document-nav" class="visible-xs visible-sm">Moving and relocation expenses</a>
       </li>
 	  <li>
-			<a href="municipal.html" class="hidden-xs hidden-sm">Municipal officer's expense allowance</a>
-			<a href="municipal.html#gc-document-nav" class="visible-xs visible-sm">Municipal officer's expense allowance</a>
+			<a href="municipal.html" class="hidden-xs hidden-sm">Municipal officer’s expense allowance</a>
+			<a href="municipal.html#gc-document-nav" class="visible-xs visible-sm">Municipal officer’s expense allowance</a>
       </li>
 <li>
 			<a href="parking.html" class="hidden-xs hidden-sm">Parking </a>
@@ -316,8 +316,8 @@
 </details> 		 
 
  	<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the vehicle is an <strong>automobile</strong>, do not continue to next step. Refer to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a></li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the vehicle is a <strong>motor vehicle</strong>, continue to: <a href="#step2">Step 2 -  Determine if you made the motor vehicle available to your employee</a></li>
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the vehicle is an <strong>automobile</strong>, do not continue to next step. Refer to: <a href="https://test.canada.ca/cra-arc/payroll/calculate/benefit/automobile.html">Automobile provided by the employer</a>.</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"> </span> If the vehicle is a <strong>motor vehicle</strong>, continue to: <a href="#step2">Step 2 -  Determine if you made the motor vehicle available to your employee</a>.</li>
 </ul>	 </li>
 
 
@@ -326,7 +326,7 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> make the motor vehicle available to your employee, there is <strong>no</strong> taxable benefit to calculate. <strong>Do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If you <strong>made the motor vehicle</strong> available to your employee, continue to: <a href="#step3">Step 3 - Determine if there was personal driving of the motor vehicle</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If you <strong>made the motor vehicle</strong> available to your employee, continue to: <a href="#step3">Step 3 - Determine if there was personal driving of the motor vehicle</a>.</li>
 </ul>
 </li>
 
@@ -345,7 +345,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the use of the employer-provided motor vehicle is in <strong>one</strong> of the above special situations, <strong>do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the use of the employer-provided motor vehicle is <strong>not</strong> in one of the above special situations, the personal driving of the motor vehicle may be a taxable benefit. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the motor vehicle benefit is taxable</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the motor vehicle benefit is taxable</a>.</p></li>
 </ul>
 </li>
 
@@ -363,7 +363,7 @@
 
 <h4>Taxable situation</h4>
 <p>If you <a href="#availability1" aria-controls="mid-screen-bg" class="overlay-lnk" role="button">make a vehicle available&nbsp;<span class="far fa-question-circle"></span></a> to your employee and they use the vehicle for <a href="#personal1" aria-controls="mid-screen-bg" class="overlay-lnk" role="button">both business and personal driving&nbsp;<span class="far fa-question-circle"></span></a>, the personal driving is taxable.</p> 
-<p>You need to calculate the value of the benefit from your employee's personal driving of the motor vehicle.  </p>
+<p>You need to calculate the value of the benefit from your employee’s personal driving of the motor vehicle.  </p>
 </div>
 
 <section id="availability1" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
@@ -385,7 +385,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step6">Step 6 - Review the required information (logbook) your employee must have kept</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step6">Step 6 - Review the required information (logbook) your employee must have kept</a>.</li>
 </ul>
 </li>
 
@@ -394,21 +394,20 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
     <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, you <strong>cannot</strong> calculate using the fixed rate calculation.</p>  
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the value of the motor vehicle benefit to be included on the T4 slip</a></p>  </li>    
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 -  Calculate the value of the motor vehicle benefit to be included on the T4 slip.</a></p>  </li>    
     <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee kept the required records and you received a copy, you may be able to calculate using the <strong>fixed rate calculation</strong>. </p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the motor vehicle home at night policy applies to the benefit</a></p>  </li>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the motor vehicle home at night policy applies to the benefit</a>.</p>  </li>
                           </ul>
 </li>
 
-<li><h3 id="step7">Determine if the motor vehicle home at night policy applies to the benefit</h3>
+<li><h3 id="step7">Determine if your employee is eligible for the fixed rate calculation</h3>
 <div data-ajax-replace="ajax/night-vehicle.txt"></div>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-           <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the motor vehicle benefit <strong>does not</strong> meet all the above conditions, you <strong>cannot</strong> calculate using the fixed rate calculation.</p>  
-	<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the value of the motor vehicle benefit to be included on the T4 slip</a></p>  </li>    
+           <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If your employee <strong>does not</strong> meet all conditions of the <strong>motor vehicle home at night policy</strong>, <strong>do not</strong> use the fixed rate calculation. </p>  
+	 </li>    
 		
-	 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the motor vehicle benefit meets <strong>all</strong> the above conditions, you can calculate using the <strong>fixed rate calculation</strong>. </p> 
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8a">Step 8: You want to calculate using the fixed rate calculation</a></p>
+	 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If your employee meets <strong>all</strong> conditions of the <strong>motor vehicle home at night policy</strong>, you can calculate using the <strong>fixed rate</strong> calculation. </p> 
 	                      </li>
 	                   </ul></li>
 
@@ -673,7 +672,7 @@
                        <li><span class="fas fa-check fa-li text-success"></span>Box 14 - Employment Income</li>
                       <li><span class="fas fa-check fa-li text-success"></span>Box 24 - EI insurable earnings <small class="text-muted">(for cash benefit only)</small></li>
                          <li><span class="fas fa-check fa-li text-success"></span>Box 26 - CPP/QPP pensionable earnings</li>
-                         <li><span class="fas fa-check fa-li text-success"></span>Code 34 - Personal use of employer's automobile or motor vehicle</li>
+                         <li><span class="fas fa-check fa-li text-success"></span>Code 34 - Personal use of employer’s automobile or motor vehicle</li>
 		
                      </ul>
   </li>
@@ -766,7 +765,7 @@
 	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/reasonable-rate-vehicle.txt"></div>
 	</div></section>
 
-	<section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a CRA's administrative policy for the purpose of taxable benefits</h2>
+	<section id="adminpolicy" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">What is a CRA’s administrative policy for the purpose of taxable benefits</h2>
 	</header>	<div class="modal-body">		
 	<div data-ajax-replace="what.html #ajax-adminpolicy"></div>
 	</div></section>	 
@@ -787,6 +786,10 @@
 	<div data-ajax-replace="what.html #ajax-noncash"></div>
 	</div></section>
 
+<section id="log" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">Logbook - Required information</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="/cra-arc/payroll/calculate/benefit/ajax/records-vehicle.txt#ajax-log"></div>
+	</div></section>
 
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
