--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -416,14 +416,14 @@
 <p>Generally, the CRA accepts the following methods:</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><strong>Reasonable allowances rate calculation</strong></li>
-<li class="cnjnctn-col"><strong>Fixed rate calculation</strong>: This calculation can only be used if you meet all conditions under step 7 </li>
+<li class="cnjnctn-col">Reasonable allowances rate calculation</li>
+<li class="cnjnctn-col">Fixed rate calculation (if all conditions in step 7 are met)</li>
 </ul>
 <p>It is also acceptable to use <strong>other methods</strong> to reasonably estimate the FMV of the motor vehicle benefit.</p>
 
-<h4>Situations</h4>
-<details><summary>Situation: You want to calculate using the <strong>reasonable allowances rate</strong> calculation</summary>
-<p id="step8b">Under the CRA’s administrative policy, you can use the <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> to calculate the motor vehicle taxable benefit.</p>
+<h4>Methods of calculations</h4>
+<details><summary>Calculate the motor vehicle benefit using the <strong>reasonable allowances rate</strong> calculation</summary>
+<p id="step8b">Under the CRA’s administrative policy, you can use the reasonable allowance rate to calculate the motor vehicle taxable benefit.</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
@@ -436,14 +436,14 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Reasonable allowance rate - First 5,000 kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - First 5,000 kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Reasonable allowance rate - Additional kilometres</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> <a href="#rates" aria-controls="centred-popup" class="wb-lbx" role="button">reasonable allowance rate&nbsp;<span class="far fa-question-circle"></span></a> - Additional kilometres</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
@@ -471,7 +471,7 @@
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Matthew was required to use a motor vehicle provided and owned by his employer in connection with his employment in Ontario. In reviewing his travel logbook, you found that he drove 10,000 km for personal driving. Matthew reimbursed you $300 for the personal driving of the motor vehicle. His personal driving of the motor vehicle was not limited to driving between home and work. His employer chose to calculate using the reasonable rates method to determine the fair market value of the personal driving of the motor vehicle.</p>
+<p>In 2022, Matthew was required to use a motor vehicle provided and owned by his employer in connection with his employment in Ontario. In reviewing his travel logbook, his employer found that he drove 10,000 km for personal driving. Matthew reimbursed the employer $300 for the personal driving of the motor vehicle. His personal driving of the motor vehicle was not limited to driving between home and work. His employer chose to calculate using the reasonable allowances rates method to determine the fair market value of the personal driving of the motor vehicle.</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -518,7 +518,7 @@
 </details>
 </details>
 
-<details><summary>Situation: You want to calculate using the <strong>fixed rate</strong> calculation</summary>
+<details><summary>Calculate the motor vehicle benefit using the <strong>fixed rate</strong> calculation</summary>
 <p>Under the CRA administrative policy, you can use the fixed rate calculation if <strong>all</strong> the following apply: </p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> Only personal driving was between home and work </li>
@@ -566,7 +566,7 @@
 
 <details class="mrgn-bttm-md">
                               <summary>Calculation example</summary>
-<p>In 2022, Matthew was required to use a motor vehicle provided by his employer in connection with his employment in Ontario. In reviewing his travel logbook, you found that he drove 10,000 km for personal driving. This personal driving was exclusively between home and work. The benefit met all other conditions of the motor vehicle home at night administrative policy. Matthew reimbursed you $300 for the personal driving of the motor vehicle. </p>
+<p>In 2022, Matthew was required to use a motor vehicle provided by his employer in connection with his employment in Ontario. In reviewing his travel logbook, his employer found that he drove 10,000 km for personal driving. This personal driving was exclusively between home and work. The benefit met all other conditions of the motor vehicle home at night administrative policy. Matthew reimbursed his employer $300 for the personal driving of the motor vehicle. </p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
@@ -606,7 +606,7 @@
 </details>
 </details>
 
-<details><summary>Situation: You want to calculate using <strong>other acceptable methods</strong> to reasonably estimate the FMV</summary>
+<details><summary>Calculate the motor vehicle benefit using <strong>other acceptable methods</strong> to reasonably estimate the FMV</summary>
 <p id="step8c">You need to reasonably estimate the FMV of your employee’s personal use of your motor vehicle, including the GST/HST and PST. </p>
 <p>The FMV is the <strong>highest price </strong>that can be obtained on an open market, between an informed and willing buyer and an informed and willing seller who are dealing at arm’s length.</p>
 
