--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -1934,7 +1934,7 @@ estimated by the number of pay periods in the year. </p>
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">Fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
