--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -519,13 +519,7 @@
 </details>
 
 <details><summary>Calculate the motor vehicle benefit using the <strong>fixed rate</strong> calculation</summary>
-<p>Under the CRA administrative policy, you can use the fixed rate calculation if <strong>all</strong> the following apply: </p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li text-success"></span> Only personal driving was between home and work </li>
-<li><span class="fas fa-check fa-li text-success"></span> Motor vehicle home at night policy meets all conditions (step 7)</li>
-</ul>
-
-<p id="step8a" class="mrgn-tp-md">The fixed rates ($0.33 for 2023 (or $0.29 for 2022)) per kilometre of personal driving to calculate the motor vehicle taxable benefit:</p>
+<p>Use the prescribed rate per kilometre of personal driving to calculate the motor vehicle benefit using the fixed rate calculation if <strong>all conditions in step 7 are met</strong>: </p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                <li><span class="fa-stack text-success">
@@ -538,7 +532,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-times"></span><span class="wb-inv">multiply by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-dollar-sign fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">Fixed rate</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"><a href="#oper-rates" aria-controls="centred-popup" class="wb-lbx" role="button">fixed rate&nbsp;<span class="far fa-question-circle"></span></a> </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
   
@@ -727,6 +721,10 @@
 </div>
 </div>
 		 
+<section id="oper-rates" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Prescribed rates (section 7305.1 of the Income Tax Regulations) per kilometre</h2>
+	</header>	<div class="modal-body">		
+	<div data-ajax-replace="#ajax-oper-rates"></div>
+	</div></section>
 	
 	<section id="availability2" class="mfp-hide modal-dialog modal-content overlay-def"> <header class="modal-header"><h2 class="modal-title">What is considered made available to your employee</h2>
 	</header>	<div class="modal-body">		
