--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -656,7 +656,7 @@
 </li>
 
 <li><h3 id="step14">Report the benefit on a slip</h3>
-<p><strong>If the benefit is taxable, </strong>you must report the following on the T4 slip<strong>. </strong></p>
+<p><strong>If the benefit is taxable, </strong>you must report the following on the slip<strong>. </strong></p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col">
