--- a/payroll/calculate/benefit/motor-vehicle.html
+++ b/payroll/calculate/benefit/motor-vehicle.html
@@ -421,7 +421,7 @@
 </ul>
 <p>It is also acceptable to use <strong>other methods</strong> to reasonably estimate the FMV of the motor vehicle benefit.</p>
 
-<h4>Methods of calculations</h4>
+<h4>Methods to calculate</h4>
 <details><summary>Calculate the motor vehicle benefit using the <strong>reasonable allowances rate</strong> calculation</summary>
 <p id="step8b">Under the CRA’s administrative policy, you can use the reasonable allowance rate to calculate the motor vehicle taxable benefit.</p>
 
